--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -5460,9 +5460,9 @@ figure.outdoor img {
         black;
  */
 
-        //font-weight: bold;
-        border-top: 6px ridge hsl(0, 0%, 83%); 
-        border-bottom: 6px ridge hsl(0, 0%, 83%); 
+        font-weight: bold;
+        border-top: 6px ridge hsl(0, 0%, 80%); 
+        border-bottom: 6px ridge hsl(0, 0%, 80%); 
         //border-radius: $border_radius_big;
 
 /*         dt {
