--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -4917,8 +4917,9 @@ figure.outdoor img {
         linear-gradient(to bottom left, hsla(0, 0%, 100%, 0.35) 0%, hsla(0, 0%, 0%, 0) 90%), // Canto esquerdo superior
         black;
  */
-  border-top: 6px ridge #d4d4d4;
-  border-bottom: 6px ridge #d4d4d4;
+  font-weight: bold;
+  border-top: 6px ridge #cccccc;
+  border-bottom: 6px ridge #cccccc;
   /*         dt {
             display: flex;
             justify-content: center;
