--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -4911,16 +4911,15 @@ figure.outdoor img {
 .codification .language {
   color: white;
   background-color: white;
-  /*         
-        background: 
-        linear-gradient(to bottom right, hsla(0, 0%, 100%, 0) 50%, black 50%), // Canto direito inferior
-        linear-gradient(to bottom left, hsla(0, 0%, 100%, 0.35) 0%, hsla(0, 0%, 0%, 0) 90%), // Canto esquerdo superior
-        black;
- */
+  /*         */
+  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 50%, black 50%), linear-gradient(to bottom left, rgba(255, 255, 255, 0.35) 0%, rgba(0, 0, 0, 0) 90%), black;
   font-weight: bold;
   border-top: 6px ridge #cccccc;
   border-bottom: 6px ridge #cccccc;
-  /*         dt {
+}
+
+.codification .language dt {
+  /*
             display: flex;
             justify-content: center;
             align-items: center;
@@ -4928,8 +4927,8 @@ figure.outdoor img {
             color: transparent;
             position: absolute;
             width: 100%;
-            height: 100%;
-        } */
+            height: 100%;*/
+  display: none;
 }
 
 .codification .language dd pre {
