--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -1611,7 +1611,7 @@ abbr.description > button:focus {
   background-size: 21px 21px;
   color: red;
   text-indent: calc(21px + 5px);
-  background-image: url("../../images/icons/textIcon_attention.svg");
+  background-image: url("../../images/icons/attention.svg");
   background-position: 0 3px;
 }
 
@@ -4901,38 +4901,53 @@ figure.outdoor img {
   margin-left: 20px;
   margin-left: 0;
   margin-right: 0;
-}
-
-.codification .dl_li.codification_piece {
-  position: relative;
   list-style: none;
 }
 
-.codification .language {
-  color: white;
-  background-color: white;
-  /*         */
-  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 50%, black 50%), linear-gradient(to bottom left, rgba(255, 255, 255, 0.35) 0%, rgba(0, 0, 0, 0) 90%), black;
-  border-top: 6px ridge #cccccc;
-  border-bottom: 6px ridge #cccccc;
+.codification dl.codification_piece .dl_li.codification_piece {
+  display: block;
 }
 
-.codification .language dt {
-  /*
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: hsla(0, 0%, 0%, 0.2);
-            color: transparent;
-            position: absolute;
-            width: 100%;
-            height: 100%;*/
+.codification .assets .dl_li.codification_piece > dd {
   display: none;
+}
+
+.codification .assets .dl_li.codification_piece:nth-child(2) > dd {
+  display: block;
+}
+
+.codification .dl_li.codification_piece.resources > dd, .codification .dl_li.codification_piece.rendering > dd, .codification .dl_li.codification_piece.console > dd {
+  border: 1px solid black;
+}
+
+.codification .dts_container dt {
+  /*
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: hsla(0, 0%, 0%, 0.2);
+        color: transparent;
+        position: absolute;
+        width: 100%;
+        height: 100%;*/
+  padding: 3px 5px;
+  border-top: 6px ridge #d4d4d4;
+  border-right: 6px ridge #d4d4d4;
+  background-color: #e6e6e6;
+}
+
+.codification .language {
+  /*       background-color: white;
+         */
 }
 
 .codification .language dd pre {
   padding: 0 20px;
+  border-top: 6px ridge #d4d4d4;
+  border-bottom: 6px ridge #d4d4d4;
   margin: 0;
+  color: white;
+  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 50%, black 50%), linear-gradient(to bottom left, rgba(255, 255, 255, 0.35) 0%, rgba(0, 0, 0, 0) 90%), black;
   overflow-x: auto;
 }
 
