--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -4904,6 +4904,46 @@ figure.outdoor img {
   list-style: none;
 }
 
+.codification dl.codification_piece .dl_li:not(:nth-last-of-type(1)) {
+  margin-bottom: 0;
+}
+
+.codification .dts_container {
+  display: flex;
+  overflow-x: auto;
+  background: linear-gradient(to bottom, white, rgba(255, 255, 255, 0.4) 52%, rgba(255, 255, 255, 0) 52%), linear-gradient(to bottom, rgba(255, 255, 255, 0) 46%, rgba(255, 255, 255, 0.7), white), linear-gradient(to bottom, #47d1ff, #00b8f5, deepskyblue), deepskyblue;
+  box-shadow: 0px 0px 0px 1px #52d4ff, inset 0px 0px 9px 7px white;
+}
+
+.codification .dts_container > * {
+  flex-grow: 1;
+  min-width: 85px;
+}
+
+.codification .dts_container > dt {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 40px;
+  padding: 1px 5px;
+  color: white;
+  font-weight: bold;
+  filter: drop-shadow(0px 0px 2px #00a0cc);
+  cursor: pointer;
+}
+
+.codification .dts_container > dt:hover {
+  filter: drop-shadow(0px 0px 2px #0090b8);
+}
+
+.codification .dts_container > dt + dt {
+  border-left: 1px solid white;
+}
+
+.codification .dts_container > .on {
+  background: linear-gradient(to bottom, white, rgba(255, 255, 255, 0.7) 52%, rgba(255, 255, 255, 0) 52%), linear-gradient(to bottom, rgba(255, 255, 255, 0) 46%, rgba(255, 255, 255, 0.7), white), linear-gradient(to bottom, #47d1ff, #00b8f5, deepskyblue), deepskyblue;
+}
+
 .codification dl.codification_piece .dl_li.codification_piece {
   display: block;
 }
@@ -4918,22 +4958,6 @@ figure.outdoor img {
 
 .codification .dl_li.codification_piece.resources > dd, .codification .dl_li.codification_piece.rendering > dd, .codification .dl_li.codification_piece.console > dd {
   border: 1px solid black;
-}
-
-.codification .dts_container dt {
-  /*
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: hsla(0, 0%, 0%, 0.2);
-        color: transparent;
-        position: absolute;
-        width: 100%;
-        height: 100%;*/
-  padding: 3px 5px;
-  border-top: 6px ridge #d4d4d4;
-  border-right: 6px ridge #d4d4d4;
-  background-color: #e6e6e6;
 }
 
 .codification .language {
