--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -5433,7 +5433,7 @@ figure.outdoor img {
 
 .codification {
 
-/*     background-color: $color_theme_clear;
+    /*     background-color: $color_theme_clear;
     border-top: 1px solid $color_theme;
     border-bottom: 1px solid $color_theme; */
     margin-top: $margin_vertical;
@@ -5445,6 +5445,59 @@ figure.outdoor img {
         margin-right: 0;
         list-style: none;
     }
+    
+    dl.codification_piece .dl_li:not(:nth-last-of-type(1)) {
+        margin-bottom: 0;
+    }
+
+    .dts_container { // Elemento criado via JavaScript
+
+        display: flex;
+        //justify-content: space-around;
+        // border: 1px solid black;
+        overflow-x: auto;
+        background: linear-gradient(to bottom, white, hsla(0, 0%, 100%, 0.4) 52%, hsla(0, 0%, 100%, 0) 52%), $bg_element_type_button_blue, deepskyblue; 
+        box-shadow: $box_shadow_element_type_button_blue; 
+
+        > * {
+            flex-grow: 1; 
+            min-width: 85px;
+        }
+
+        > dt {
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            min-height: $button_height_small;
+            // text-align: center;
+            padding: 1px 5px;
+            // border-top: 6px ridge hsl(0, 0%, 83%); 
+            // border-right: 6px ridge hsl(0, 0%, 83%); 
+            //background-color: hsla(195, 0%, 90%, 1);
+            color: $color_text_menu;
+            font-weight: bold;
+        // background: linear-gradient(to bottom, white, hsla(0, 0%, 100%, 0.6) 52%, hsla(0, 0%, 100%, 0) 52%), $bg_element_type_button_blue, deepskyblue; 
+            filter: $filter_element_type_button_piece_text_blue;
+            cursor: pointer;
+
+            &:hover {
+                filter: drop-shadow(0px 0px 2px hsl(193, 100%, 36%));
+            }
+
+            * {
+                
+            }
+        }
+
+
+        > dt + dt {
+            border-left: 1px solid $color_text_menu;
+        }
+
+        > .on {
+            background: linear-gradient(to bottom, white, hsla(0, 0%, 100%, 0.7) 52%, hsla(0, 0%, 100%, 0) 52%), $bg_element_type_button_blue, deepskyblue; 
+        }
+    }
 
     dl.codification_piece .dl_li.codification_piece {
         display: block;
@@ -5452,12 +5505,10 @@ figure.outdoor img {
 
     .assets .dl_li.codification_piece > dd {
         display: none;
-        //position: relative;
     }
 
     .assets .dl_li.codification_piece:nth-child(2) > dd {
         display: block;
-        //position: relative;
     }
 
     .dl_li.codification_piece.resources > dd, .dl_li.codification_piece.rendering > dd, .dl_li.codification_piece.console > dd {
@@ -5467,24 +5518,6 @@ figure.outdoor img {
     // .dl_li.codification_piece.rendering > dd, .dl_li.codification_piece.console > dd  {
     //     display: block;
     // }
-
-    .dts_container dt {/*
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: hsla(0, 0%, 0%, 0.2);
-        color: transparent;
-        position: absolute;
-        width: 100%;
-        height: 100%;*/
-
-        //display: none;
-
-        padding: 3px 5px;
-        border-top: 6px ridge hsl(0, 0%, 83%); 
-        border-right: 6px ridge hsl(0, 0%, 83%); 
-        background-color: hsla(195, 0%, 90%, 1);
-    } 
 
     .language {
  /*       background-color: white;
