--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -5433,6 +5433,8 @@ figure.outdoor img {
 
 .codification {
 
+    display: none; // 
+
     /*     background-color: $color_theme_clear;
     border-top: 1px solid $color_theme;
     border-bottom: 1px solid $color_theme; */
