--- a/styles/css/identity.css
+++ b/styles/css/identity.css
@@ -1,18 +1,16 @@
 @charset "UTF-8";
+/*
+┌──────────────────────────────────────────────────────┐
+│                                                  gmes-identity.css                                                  │
+└──────────────────────────────────────────────────────◈ */
 /*  
-──────────────────────────────────────────────────────
-gmes-identity.css  
-────────────────────────────────────────────────────── */
-/* 
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Framework - Variables
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 /* Padrão: 600-700px. */
 /* Apple: 16px em 320w, e 22px em 736w. */
-/*  
-────────────────────────────
-TODO:    > Specific Elements & Components
-──────────────────────────── */
+/*  TODO:    1 ▶ Specific Elements & Components
+◈──────────────────────────────────────────────────────◈ */
 /*
 $bg_header: linear-gradient(to bottom, hsl(197,100%,78%) 0%,hsl(200,100%,76%) 10%,hsl(203,100%,71%) 25%,hsl(204,100%,72%) 37%,hsl(204,100%,73%) 50%,hsl(203,100%,67%) 51%,hsl(202,100%,76%) 83%,hsl(198, 100%, 84%) 100%); 
 $bg_nav: linear-gradient(to bottom right, hsl(204,100%,73%) 0%,hsl(203,100%,67%) 10%,hsl(193,100%,82%) 33%, hsl(193,100%,76%) 55%, hsl(170, 100%, 88%) 90%,hsl(170, 100%, 88%) 100%);
@@ -48,9 +46,9 @@ $color_box_shadow_out_button_type_image_piece_text_floating: hsla(193, 100%, 66%
 $bg_button_type_image_piece_text_floating: hsla(192, 100%, 98%, 0.95); 
 */
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Framework - Classes JS
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .display_none {
   display: none;
 }
@@ -59,10 +57,10 @@ TODO: Framework - Classes JS
   overflow: hidden;
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Seções De Layout
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .header-content {
   max-width: 800px;
 }
@@ -109,10 +107,10 @@ TODO: Seções De Layout
   }
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Others
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 table th {
   /*
         background: url(../../framework/images/colors/text_table_th.png)  center /100% 100%;
@@ -127,10 +125,10 @@ table th {
   padding: 8px 0px 0px 7px;
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Slider
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .slider {
   /*  
     img, picture { 
@@ -157,7 +155,7 @@ TODO: Slider
 /* 
 ────────────────────────────────────────────────────── 
 TODO: Download Page
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .download_buttons {
   display: flex;
   justify-content: space-evenly;
@@ -180,10 +178,10 @@ TODO: Download Page
   width: 180px;
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Types Table
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 @media (pointer: fine) and (min-width: 501px) and (min-height: 501px) {
   .types_table_msg {
     display: none !important;
@@ -308,10 +306,10 @@ TODO: Types Table
 }
 
 */
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Skills - Table
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 @media (min-width: 1920px) {
   .FULLHD_STC_conteiner {
     position: fixed;
@@ -324,6 +322,7 @@ TODO: Skills - Table
   }
 }
 
+/*  */
 .skills_types_choice:not(.dropdown_open) {
   display: flex !important;
   align-items: center;
@@ -604,6 +603,16 @@ TODO: Skills - Table
 
 .skills_table td.Effect {
   font-size: 0;
+  max-width: 250px;
+  padding-left: 6px;
+  padding-right: 6px;
+  /* 
+        > span:not(:empty) + span {
+
+            margin-left: 9px;
+            margin-right: 9px;
+        }
+ */
 }
 
 .skills_table td.Effect > span:empty {
@@ -615,11 +624,9 @@ TODO: Skills - Table
   padding: 4px 8px;
   margin-top: 4px;
   margin-bottom: 4px;
+  margin-left: 5px;
+  margin-right: 5px;
   border-radius: 1000px;
-}
-
-.skills_table td.Effect > span + span {
-  margin-left: 9px;
 }
 
 .skills_table td.Effect .SPD {
@@ -736,7 +743,7 @@ TODO: Skills - Table
   text-align: center;
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: ...
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
